# rsmq-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: benchmark.rs
examples/: exa.rs
src/: lib.rs
tests/: rsmq_test.rs
