[package]
name = "rsmq"
description = "A Rust implementation of [RSMQ](https://smrchy.github.io/rsmq/about/) (Redis Simple Message Queue)."
license = "MIT"
repository = "https://github.com/dvdplm/rsmq-rust"
version = "0.1.1"
authors = ["David Palm <dvdplm@gmail.com>"]

[dependencies]
redis = "0.8"
num-bigint = "0.1.41"
rand = "0.3.18"
r2d2 = "0.8.1"
r2d2_redis_patch = "0.6.1"

[dev-dependencies]
criterion = "0.1.0"