[package]
name = "rsmq"
description = "A Rust implementation of [RSMQ](https://smrchy.github.io/rsmq/about/) (Redis Simple Message Queue)."
license = "MIT"
repository = "https://github.com/dvdplm/rsmq-rust"
version = "0.2.1"
edition = "2018"
authors = ["David Palm <dvdplm@gmail.com>", "Seun Lanlege <seunlanlege@gmail.com>"]

[dependencies]
redis = "0.15"
radix = "0.6.0"
rand = "0.7.3"
bb8 = "0.4.2"
bb8-redis = "0.5.0"
failure = "0.1.1"

[dev-dependencies]
criterion = "0.1.1"
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }